fix of background issue on mobile

--- a/recipes/style.css
+++ b/recipes/style.css
@@ -18,10 +18,14 @@
     box-sizing: border-box;
 }
 
+html {
+    background: linear-gradient(135deg, #060623 0%, #061f28 100%);
+    background-attachment: fixed;
+}
+
 body {
     font-family: super, Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #060623;
-    background: linear-gradient(135deg, #060623 0%, #061f28 100%);
+    background: transparent;
     min-height: 100vh;
     padding: 40px 20px;
     color: rgb(222, 252, 255);
